# embedded-cameras

./: CMakeLists.txt
Boost_tests/: CMakeLists.txt
Boost_tests/TriggerAVT_tests/: CamConfig_tests.cpp  Integration_tests.cpp  TriggerSignal_tests.cpp
logitech_webcam/: main.cpp
src/TriggerAVT/: main.cpp  trigger_avt.hpp
src/helpers/: CamControl_helper.hpp  CamControl_mockHelper.hpp  CamHandle_mockHelper.hpp  GPIO_mockHelper.hpp  I2C_mockHelper.hpp
